--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,14 +1,20 @@
 @import "~bulma/sass/utilities/initial-variables"
 
+/* Theme extraction */
+$Light-Background: #F0F0F2;
+$Light-Blue: #75A3BF;
+$Dark-blue: #366273;
+
 // Config vars
 // Kaldi logo brand color: #FD461E
 $kaldi-red: #D64000
 $kaldi-red-invert: #fff
 
-$primary: $kaldi-red
+$primary: $Dark-blue
 $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
+// $background: $kaldi-red
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -84,6 +90,9 @@ footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
 
+.profile-picture
+  float: left
+
 //Menu overrides
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
@@ -119,8 +128,11 @@ $menu-label-color: $white-ter
   display: flex;
   margin-bottom: 1em;
 .blog-list-item .featured-thumbnail
-  flex-basis: 35%;
+  flex-basis: 50%;
   margin: 0 1.5em 0 0;
+
+.condition-text
+  color: $kaldi-red
 
 
 @import "~bulma"
